<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_form"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#ededed"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/your_closest_address_is"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/street1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/street_number"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/street2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/route1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/route"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/route2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/neighborhood1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/neighborhood"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/neighborhood2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/state1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/state2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/zip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/zip_code"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/zip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>