<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/hello_world"
        android:textColor="#ffffff"
        android:textSize="9pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_get_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/get_location" />

    <TextView
        android:id="@+id/TV_my_Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/btn_get_my_location"
        android:layout_marginTop="34dp"
        android:text="@string/my_latitude"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/TV_my_Lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TV_Show_My_Lat"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:text="@string/my_longitude"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/TV_Show_My_Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TV_my_Lat"
        android:layout_alignStart="@+id/TV_my_Lat"
        android:layout_below="@+id/TV_my_Lat"
        android:text="fetch"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/TV_Show_My_Lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TV_my_Lon"
        android:layout_alignStart="@+id/TV_my_Lon"
        android:layout_below="@+id/TV_my_Lon"
        android:text="fetch"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_get_my_closest_location"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/gps_coordinates_to_standard_address" />

    <Button
        android:id="@+id/btn_distance_to_TTT"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_get_my_closest_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/find_your_distance_to_turn_to_tech" />

</RelativeLayout>